<?xml version="1.0"?>
<package>
  <name>dji_m100_rob560</name>
  <version>0.1.0</version>
  <description>DJI Matrice 100 autonomous obstacle avoidance package.</description>

  <maintainer email="rkajat15@student.aau.dk">Roland Kajatin</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/dji_m100_rob560</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dji_sdk</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>dji_sdk</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- <build_export_depend>dji_sdk</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>dji_sdk</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend> -->

  <export>
  </export>
</package>